--- a/.gitignore
+++ b/.gitignore
@@ -206,3 +206,7 @@ $RECYCLE.BIN/
 *.lnk
 
 # End of https://www.toptal.com/developers/gitignore/api/codeigniter,macos,windows,phpstorm,composer
+
+# propis:
+
+www/app/Config/App.php
