--- a/www/composer.json
+++ b/www/composer.json
@@ -12,7 +12,8 @@
     "require": {
         "php": "^8.1",
         "codeigniter4/framework": "^4.0",
-        "guzzlehttp/guzzle": "^7.9"
+        "guzzlehttp/guzzle": "^7.9",
+        "nesbot/carbon": "^3.9"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9",
